<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">BelajarBahasaInggris</string>
    <string name="lets_fun_english">LETS FUN ENGLISH</string>
    <string name="belajar">Belajar</string>
    <string name="about">Tentang</string>
    <string name="exit">Keluar</string>
    <string name="menutubuh">menampilkan menu bagian tubuh</string>
    <string name="menubuahdansayur">menampilkan menu buah dan sayur</string>
    <string name="menubinatang">menampilkan menu macam-macam binatang</string>
    <string name="menuruangkelas">menampilkan menu benda di kelas</string>
    <string name="menukeluarga">menampilkan daftar keluarga</string>
    <string name="help1">menu bantuan</string>
    <string name="back1">untuk kembali ke halaman sebelumnya</string>
    <string name="anjing">gambar anjing</string>
    <string name="badak">gambar badak</string>
    <string name="domba">gambar domba</string>
    <string name="gajah">gambar gajah</string>
    <string name="harimau">gambar harimau</string>
    <string name="jerapah">gambar jerapah</string>
    <string name="kucing">gambar kucing</string>
    <string name="kurakura">gambar kura-kura</string>
    <string name="lumbalumba">gambar lumba-lumba</string>
    <string name="monyet">gambar monyet</string>
    <string name="singa">gambar singa</string>
    <string name="zebra">gambar zebra</string>
    <string name="popbinatang">menampilkan gambar binatang</string>
    <string name="help2">tombol bantuan</string>
    <string name="back2">untuk kembali ke menu sebelumnya</string>
    <string name="apel">gambar apel</string>
    <string name="bawangmerah">gambar bawang merah</string>
    <string name="bawangputih">gambar bawang putih</string>
    <string name="brokoli">gambar brokoli</string>
    <string name="cabai">gambar cabai</string>
    <string name="jeruk">gambar jeruk</string>
    <string name="mangga">gambar mangga</string>
    <string name="nanas">gambar nanas</string>
    <string name="semangka">gambar semangka</string>
    <string name="timun">gambar timun</string>
    <string name="tomat">gambar tomat</string>
    <string name="wortel">gambar wortel</string>
    <string name="popbuahdansayur">menampilkan buah dan sayur</string>
    <string name="help3">tombol bantuan</string>
    <string name="back3">untuk kembali ke halaman sebelumnya</string>
    <string name="meja">gambar meja</string>
    <string name="kursi">gambar kursi</string>
    <string name="jam">gambar jam</string>
    <string name="kapur">gambar kapur</string>
    <string name="papantulis">gambar papan tulis</string>
    <string name="pen">gambar pen</string>
    <string name="penggaris">gambar penggaris</string>
    <string name="pensil">gambar pensil</string>
    <string name="penghapus">gambar penghapus</string>
    <string name="stabilo">gambar stabilo</string>
    <string name="popkelas">menampilkan ruang kelas</string>
    <string name="help4">tombol bantuan</string>
    <string name="back4">untuk kembali ke halaman sebelumnya</string>
    <string name="kakek">gambar kakek</string>
    <string name="nenek">gambar nenek</string>
    <string name="ayah">gambar ayah</string>
    <string name="ibu">gambar ibu</string>
    <string name="sdrl">gambar saudara laki-laki</string>
    <string name="sdrp">gambar saudara perempuan</string>
    <string name="paman">gambar paman</string>
    <string name="bibi">gambar bibi</string>
    <string name="popkeluarga">menampilkan gambar keluarga</string>
    <string name="help5">tombol bantuan</string>
    <string name="back5">untuk kembali ke halaman sebelumnya</string>
    <string name="kepala">gambar kepala</string>
    <string name="rambut">gambar rambut</string>
    <string name="alis">gambar alis</string>
    <string name="mata">gambar mata</string>
    <string name="hidung">gambar hidung</string>
    <string name="mulut">gambar mulut</string>
    <string name="telinga">gambar telinga</string>
    <string name="tangan">gambar tangan</string>
    <string name="jari">gambar jari</string>
    <string name="lutut">gambar lutut</string>
    <string name="kaki">gambar kaki</string>
    <string name="poptubuh">menampilkan anggota tubuh</string>
    <string name="help6">tombol bantuan</string>
    <string name="back6">untuk kembali ke halaman sebelumnya</string>
    <string name="text2">.</string>
    <string name="logo">logo aplikasi</string>
    <string name="text1">.</string>
</resources>