<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KelasActivity"
    android:layout_margin="2dp"
    android:background="@drawable/bg1">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:scrollbarSize="0dp"
        android:scrollbarStyle="insideOverlay"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        tools:ignore="MissingConstraints,UselessLeaf">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            tools:ignore="ExtraText">

            <ImageButton
                android:id="@+id/meja"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/kelas_meja"
                android:contentDescription="@string/meja" />
            <ImageButton
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/kursi"
                android:background="@drawable/kelas_kursi"
                android:contentDescription="@string/kursi" />
            <ImageButton
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/jam"
                android:background="@drawable/kelas_jam"
                android:contentDescription="@string/jam" />
            <ImageButton
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/kapur"
                android:background="@drawable/kelas_kapur"
                android:contentDescription="@string/kapur" />
            <ImageButton
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/papantulis"
                android:background="@drawable/kelas_papantulis"
                android:contentDescription="@string/papantulis" />
            <ImageButton
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/pen"
                android:background="@drawable/kelas_pen"
                android:contentDescription="@string/pen" />
            <ImageButton
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/penggaris"
                android:background="@drawable/kelas_penggaris"
                android:contentDescription="@string/penggaris" />
            <ImageButton
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/pensil"
                android:background="@drawable/kelas_pensil"
                android:contentDescription="@string/pensil" />
            <ImageButton
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/penghapus"
                android:background="@drawable/kelas_penghapus"
                android:contentDescription="@string/penghapus" />
            <ImageButton
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/stabilo"
                android:background="@drawable/kelas_stabilo"
                android:contentDescription="@string/stabilo" />
        </LinearLayout>

    </HorizontalScrollView>

    <ImageView
        android:id="@+id/tampil_ruangkelas"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/pop_ruangkelas"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/popkelas" />

    <ImageButton
        android:id="@+id/buttonHelp"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/help"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="645dp"
        tools:layout_editor_absoluteY="16dp"
        android:contentDescription="@string/help4"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/back"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/back4"
        android:layout_alignParentEnd="true" />

</RelativeLayout>