<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".KeluargaActivity"
    android:layout_margin="2dp"
    android:background="@drawable/bg1">

    <HorizontalScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollbars="none"
        android:scrollbarSize="0dp"
        android:scrollbarStyle="insideOverlay"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        tools:ignore="MissingConstraints,UselessLeaf">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp">

            <ImageButton
                android:id="@+id/kakek"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/keluarga_kakek"
                android:contentDescription="@string/kakek" />
            <ImageButton
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/nenek"
                android:background="@drawable/keluarga_nenek"
                android:contentDescription="@string/nenek" />
            <ImageButton
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/ayah"
                android:background="@drawable/keluarga_ayah"
                android:contentDescription="@string/ayah" />
            <ImageButton
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/ibu"
                android:background="@drawable/keluarga_ibu"
                android:contentDescription="@string/ibu" />
            <ImageButton
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/sdrl"
                android:background="@drawable/keluarga_sdrl"
                android:contentDescription="@string/sdrl" />
            <ImageButton
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/sdrp"
                android:background="@drawable/keluarga_sdrp"
                android:contentDescription="@string/sdrp" />
            <ImageButton
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/paman"
                android:background="@drawable/keluarga_paman"
                android:contentDescription="@string/paman" />
            <ImageButton
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:id="@+id/bibi"
                android:background="@drawable/keluarga_bibi"
                android:contentDescription="@string/bibi" />
            </LinearLayout>
    </HorizontalScrollView>

    <ImageView
        android:id="@+id/tampil_keluarga"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/pop_keluarga"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/popkeluarga" />

    <ImageButton
        android:id="@+id/buttonHelp"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/help"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/help5"
        android:layout_alignParentStart="true" />

    <ImageButton
        android:id="@+id/buttonBack"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/back"
        tools:ignore="MissingConstraints"
        android:contentDescription="@string/back5"
        android:layout_alignParentEnd="true" />

</RelativeLayout>