<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1"
    android:layout_margin="2dp"
    tools:context=".MainActivity">

        <ImageButton
            android:id="@+id/buttonLogo"
            android:layout_width="600dp"
            android:layout_height="100dp"
            android:layout_marginTop="120dp"
            android:background="@drawable/logo"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/logo" />
         <TextView
            android:text="@string/text1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/textView"
            tools:ignore="RelativeOverlap" />
        <ImageButton
            android:id="@+id/buttonBelajar"
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_marginTop="50dp"
            android:layout_alignTop="@+id/textView"
            android:layout_centerHorizontal="true"
            android:background="@drawable/b_belajar"
            android:contentDescription="@string/belajar"
            tools:ignore="OnClick" />

    <ImageButton
        android:id="@+id/buttonAbout"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:background="@drawable/about"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/about"
        android:layout_marginStart="10dp" />

    <ImageButton
        android:id="@+id/buttonExit"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/exit"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/exit"
        android:layout_marginEnd="10dp" />

</RelativeLayout>